--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -4,8 +4,8 @@ build:
 cards:
   message: "Hey, welcome to EazyBank cards related prod APIs"
   contactDetails:
-    name: "Sandra Harald - Product Owner"
-    email: "sandra@eazybank.com"
+    name: "Ritik - Product Owner"
+    email: "ritik@hello.com"
   onCallSupport:
     - (617) 432-2356
     - (936) 564-8721
