--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -4,8 +4,8 @@ build:
 loans:
   message: "Welcome to EazyBank loans related QA APIs "
   contactDetails:
-    name: "Cyrano Marita - QA Lead"
-    email: "cyrano@eazybank.com"
+    name: "Hello QA - QA Lead"
+    email: "helloqa@eazybank.com"
   onCallSupport:
     - (785) 545-6565
     - (853) 546-3467
